--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /*variabile per il colore primario*/
   --primary-color: #0078a3; /* Azzurro */
   --secondary-color: #005f7f; /* Azzurro scuro */
+  font-family: "Space Grotesk", sans-serif, Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -20,9 +20,26 @@ body {
   max-width: 900px;
   margin: auto;
   padding: 2rem;
-  background: white;
+  background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.video-background iframe {
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  object-fit: cover;
 }
 
 header {
